# Alien-Invaders

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Create an Exacutable.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
alieninvaders/: __init__.py  __main__.py  alien_fleet.py  alieninvaders.py  bullet.py  color.py  explosion.py  scoreboard.py  settings.py  ship.py
docs/: conf.py  index.rst
resources/logs/: high-scores.txt
src/alieninvaders/: __main__.py  alien.py  alien_fleet.py  alien_invaders.py  alieninvaders.py  bullet.py  button.py  color.py  game_stats.py  scoreboard.py  settings.py  ship.py
src/alieninvadersproject/: __init__.py
src/resources/logs/: high-scores.txt
tests/: test_alieninvadersproject.py
